feat(swagger)
add swag anotation and regenerate documentation
